fixing image positions on mobile

--- a/mobile.css
+++ b/mobile.css
@@ -3,7 +3,7 @@
         background: url("images/background1.jpg") no-repeat center center fixed !important; 
     }
     #files {
-        margin-left:6% !important;
+        margin-left:11% !important;
     }
     #sub1 {
         display:none !important;
@@ -20,7 +20,7 @@
         left: 0 !important;
     }
     #close {
-        margin-left:90% !important;
+        margin-left:91% !important;
         margin-top:1% !important;
     }
     #sub2 {
@@ -29,28 +29,58 @@
     .sub2folder {
         width:100% !important;
     }
-    #gerp {
-        margin-left:6%;
+}
+
+
+@media only screen and (max-width: 400px) {
+    #window {
+        width:98.2% !important;
+        height:99.2% !important;
     }
-    #afacts {
-        margin-left:14%;
+    #files {
+        margin-left:6% !important;
     }
-    #nocgoot {
-        margin-left:14%;
+    #close {
+        margin-left:90% !important;
     }
-    #lhs {
-        margin-left:37%;
+}
+
+@media only screen and (max-width: 350px) {
+    html {
+        background: url("images/background1.jpg") no-repeat center center fixed !important; 
     }
-    #tufts {
-        margin-left:26%;
+    #close {
+        margin-left:89% !important;
     }
-    #guitar {
-        margin-left:0%;
+    #files {
+        margin-left:11% !important;
     }
-    #games {
-        margin-left:0%;
+    .file {
+        width:80px !important;
+        height:80px !important;
+        font-size:15px !important;
+        background-position: 0px 0px !important;
+        padding-right:20px !important;
+        padding-top:65px !important;
     }
-    #watches {
-        margin-left:20%;
+    #github {
+        background-position: -8px -8px !important;
+        padding-top:-3px !important;
+    }
+    #ig {
+        background-position: 7px 2px !important;
+        padding-right:20px !important;
+    }
+    #linkedin {
+        background-position: -4px -4px !important;
+    }
+    #resume {
+        background-position:0px 0px !important;
+    }
+    #gamepic {
+        width:300px !important;
+    }
+    #guitarpic {
+        width:300px !important;
     }
 }
