--- a/window.css
+++ b/window.css
@@ -54,7 +54,7 @@
     float:left;
     width:450px;
     height:92.5%;
-    
+    text-align:center;
 }
 
 .sub1folder {
